--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,7 +1,7 @@
 .button {
   font: inherit;
-  border: 1px solid #4f005f;
-  background: #4f005f;
+  border: 1px solid #ffffff;
+  background: #0f39a3;
   color: white;
   padding: 0.75rem 3.5rem;
   cursor: pointer;
